--- a/src/css/player.scss
+++ b/src/css/player.scss
@@ -20,7 +20,7 @@
 
 .skin_default {
   position: relative;
-  z-index: 999;
+  // z-index: 999;
 
   .mejs-controls {
     display: none;
